--- a/hmwrk3 styles.css
+++ b/hmwrk3 styles.css
@@ -42,65 +42,12 @@ p {
   margin: 0;
 }
 /* BURGER---------------------------------------- */
-/* .burger {
-  display: none;
-  width: 5%;
-  max-height: 30px;
-  position: relative;
-  left: 50%;
-}
-.menu-btn {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 80%;
-  height: 80%;
-  cursor: pointer;
-  transition: all 0.5s ease-in-out;
-  border: 3px solid #fff;
-} */
-/* .menu-btn__burger {
-  width: 100%;
-  height: 3px;
-  background: #6c489e;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(255, 191, 249, 0.2);
-  transition: all 0.5s ease-in-out;
-}
-.menu-btn__burger::before,
-.menu-btn__burger::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 3px;
-  background: #6c489e;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(255, 191, 249, 0.2);
-  transition: all 0.5s ease-in-out;
-}
-.menu-btn__burger::before {
-  transform: translateY(-16px);
-}
-.menu-btn__burger::after {
-  transform: translateY(16px);
-} */
-/* ANIMATION */
-/* .menu-btn.open .menu-btn__burger {
-  transform: translateX(-50px);
-  background: transparent;
-  box-shadow: none;
-}
-.menu-btn.open .menu-btn__burger::before {
-  transform: rotate(45deg) translate(35px, -35px);
-}
-.menu-btn.open .menu-btn__burger::after {
-  transform: rotate(-45deg) translate(35px, 35px);
-} */
-/*  BURGERBURGERBURGE_________________________RBURGERBURGER */
 
 /* todo BURGER2 */
 .burger-navbar {
+  display: none;
+}
+.burger-menu-content {
   display: none;
 }
 .burger-navbar > img {
